@@ -207,6 +207,6 @@ up for the musicexpr called @code{one}, down for the musicexpr called
 ",
 /* creats*/       "TextScript",
 /* acks  */       "multi-measure-rest-interface
-slur-interface stem-interface tie-interface note-head-interface"
+slur-interface stem-interface tie-interface note-head-interface dynamic-interface text-interface"
 ,/* reads */       "combineParts noDirection soloADue soloText soloIIText aDueText split-interval unison solo unisilence unirhythm",
 /* write */       "");
